force-app/main/default/objects/Revenue_Accrual_Office_Split__c/Revenue_Accrual_Office_Split__c.object-meta.xml
<CustomObject>
    <label>Revenue Accrual Office Split</label>
    <nameField>
        <label>Revenue Accrual Office Split Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Accrual Office Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>