force-app/main/default/objects/Revenue_Accrual_Office_Split__c/fields/Engagement_LOB__c.field-meta.xml
<CustomField>
    <fullName>Engagement_LOB__c</fullName>
    <label>Engagement LOB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>