force-app/main/default/objects/Revenue_Accrual_Office_Split__c/fields/Office_Split__c.field-meta.xml
<CustomField>
    <fullName>Office_Split__c</fullName>
    <label>Office Split</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>