force-app/main/default/objects/Revenue_Accrual_Office_Split__c/fields/Office_Split_Override_Percent__c.field-meta.xml
<CustomField>
    <fullName>Office_Split_Override_Percent__c</fullName>
    <label>Office Split Override Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>