force-app/main/default/objects/Revenue_Accrual_Office_Split__c/fields/Office_Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Office_Split_Percent__c</fullName>
    <label>Office Split Percent</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>