force-app/main/default/objects/Revenue_Accrual_Office_Split__c/fields/Revenue_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Accrual__c</fullName>
    <label>Revenue Accrual</label>
    <referenceTo>Revenue_Accrual__c</referenceTo>
    <relationshipLabel>Revenue Accrual Office Splits</relationshipLabel>
    <relationshipName>Revenue_Accrual_Office_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>